fix overflow in small screens

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 html{
   overflow-x: hidden;
 }
+body{
+    max-width: 100vw !important;
+    overflow: hidden;
+}
 .home {
   background-image: repeating-linear-gradient(
       94deg,
